--- a/docs_theme/base.html
+++ b/docs_theme/base.html
@@ -5,17 +5,17 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>{% if page_title %}{{ page_title }} - {% endif %}{{ site_name }}</title>
-  <link href="{{ base_url }}/img/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="/img/favicon.ico" rel="icon" type="image/x-icon">
   <link rel="canonical" href="{{ canonical_url }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Django, API, REST{% if current_page %}, {{ current_page.title }}{% endif %}">
   <meta name="author" content="Tom Christie">
 
   <!-- Le styles -->
-  <link href="{{ base_url }}/css/prettify.css" rel="stylesheet">
-  <link href="{{ base_url }}/css/bootstrap.css" rel="stylesheet">
-  <link href="{{ base_url }}/css/bootstrap-responsive.css" rel="stylesheet">
-  <link href="{{ base_url }}/css/default.css" rel="stylesheet">
+  <link href="/css/prettify.css" rel="stylesheet">
+  <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="/css/default.css" rel="stylesheet">
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
@@ -138,13 +138,13 @@
   <!-- Le javascript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="{{ base_url }}/js/jquery-1.8.1-min.js"></script>
-  <script src="{{ base_url }}/js/prettify-1.0.js"></script>
-  <script src="{{ base_url }}/js/bootstrap-2.1.1-min.js"></script>
+  <script src="/js/jquery-1.8.1-min.js"></script>
+  <script src="/js/prettify-1.0.js"></script>
+  <script src="/js/bootstrap-2.1.1-min.js"></script>
   <script src="https://fund.django-rest-framework.org/sidebar_include.js"></script>
-  <script>var base_url = '{{ base_url }}';</script>
-  <script src="{{ base_url }}/mkdocs/js/require.js"></script>
-  <script src="{{ base_url }}/js/theme.js"></script>
+  <script>var base_url = '';</script>
+  <script src="/mkdocs/js/require.js"></script>
+  <script src="/js/theme.js"></script>
 
   <script>
     var shiftWindow = function() {
