Only insert funding <hr> if toc is present

--- a/docs_theme/main.html
+++ b/docs_theme/main.html
@@ -102,7 +102,7 @@
                 {% endfor %}
 
                   <div class="promo">
-                    <hr/>
+                    {% if page.toc %}<hr/>{% endif %}
                     <div id="sidebarInclude">
                   </div>
               </ul>
